fix: font size on mobile width

--- a/src/app/(board)/games/[game_id]/board/_components/PlayerName/PlayerName.module.css
+++ b/src/app/(board)/games/[game_id]/board/_components/PlayerName/PlayerName.module.css
@@ -17,14 +17,9 @@
 
   @mixin larger-than 62em {
     writing-mode: vertical-rl;
-    font-size: clamp(2rem, 10vh, 3.5rem);
-    line-height: clamp(2rem, 10vh, 4rem);
+    font-size: clamp(2rem, 8vh, 4.5rem);
+    line-height: clamp(2rem, 8vh, 4.5rem);
     padding-top: 0;
-
-    @container (min-width: 100px) {
-      font-size: 4rem;
-      line-height: 4rem;
-    }
 
     &[data-aql="true"] {
       font-size: clamp(1.5rem, 6vh, 3rem);
